# file_manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  file_manager  main.c
src/: actions.c  actions.h  constants.c  constants.h  debug.h  display.c  display.h  exit.c  exit.h  extensions.c  extensions.h  global_buf.c  global_buf.h  init.c  init.h  logger.c  logger.h  main.c  strings_storage.c  strings_storage.h  structs.c  structs.h  utils.c  utils.h
vim_ext/: vim_ext.c
